# cyber_bank_rs

./: .dockerignore  .editorconfig  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml
migrations/: 20231031232841_setup.down.sql  20231031232841_setup.up.sql  setup.sql
src/: db.rs  lib.rs  main.rs
src/auth/: login.rs  mod.rs  registration.rs
src/auth/token/: jwt.rs  middleware.rs  mod.rs  validation.rs
