[package]
name = "cyber_bank_rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"

[[bin]]
name = "db_setup"

[dependencies]
actix-web = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "uuid"] }
tokio = { version = "1.33", features = ["full"] }
env_logger = { version = "0.10" }
uuid = { version = "1.5", features = ["serde"]}
rand = "0.8"
bcrypt-pbkdf = "0.10"
rust-argon2 = "2.0"
regex = "1.10"
log = "0.4.20"
dotenvy = "0.15"
