[package]
name = "cyber_bank_rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"

[dependencies]
actix-web = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "uuid", "chrono"] }
tokio = { version = "1.33", features = ["full"] }
env_logger = { version = "0.10" }
uuid = { version = "1.5", features = ["serde"]}
rand = "0.8"
rust-argon2 = "2.0"
regex = "1.10"
log = "0.4"
dotenvy = "0.15"
jsonwebtoken = "9.1"
chrono = { version = "0.4", features = ["serde"] }
actix-utils = "3.0"
mime = "0.3"
futures-util = "0.3"
blake2 = "0.10"
base64 = "0.21"
keyring = "2.0"
